[package]
name = "hellorust"
version = "0.1.0"
authors = ["Matt Higgins"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = {version = "=0.8.1"}
bracket-terminal = "=0.8.1"
specs = "0.16.1"
specs-derive = "0.4.1"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 's'
lto = "thin"
